--- a/news.html
+++ b/news.html
@@ -1,10 +1,10 @@
 		<h2>News</h2>
 		<p>Welcome to TMW-LoF!</p>
+		<p>Happy New Year!</p>
 		<p>Merry Christmas! Welcome to
 		LoF, enjoy our new Chistmas/Winter
 		maps done by Lavender, KeeKeeKat,
-		and Billr! The Christmas quest by
-		Cordo is coming soon, have fun!</p>
+		and Billr!</p>
 		<p>More items are now available
 		from the Exotic Trader
 		North-West of Hurns.
