--- a/news.html
+++ b/news.html
@@ -1,26 +1,17 @@
 		<h2>News</h2>
 		<p>Welcome to TMW-LoF!</p>
-		<p>Happy New Year!</p>
-		<p>Merry Christmas! Welcome to
-		LoF, enjoy our new Chistmas/Winter
-		maps done by Lavender, KeeKeeKat,
-		and Billr!</p>
+		<p>We have updated to latest TMW
+		content as of 1/24/14, please
+		report any bugs in IRC or the
+		forums. Have fun!</p>
 		<p>More items are now available
 		from the Exotic Trader
 		North-West of Hurns.
-		Also Cerhan in the Hurns
+		Also Nahrec in the Hurns
 		smithy has some more items
 		available to craft. Have fun!</p>
-		<p>We have merged all of
-		TMW's new quests, mobs,
-		and maps, have fun!</p>
 		<p>Part 1 of Ozthokk's
 		An Episode has been completed!
 		Talk to The Doctor in the Hurnscald
 		House to start the multi part quest.</p>
-		<p>The night world has
-		been added! Visit the
-		Teleporter in Hurns
-		if you think you can 
-		survive in the dark.</p>
 		<p>-LoF Dev Team</p>
